# NNIST

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: sbom.yml
cmake/: warnings.cmake
cmake/toolchains/: mingw64.cmake
nnist/: CMakeLists.txt
nnist/include/nnist/: constants.h  nnist.h  parsers.h  serdes.h  types.h
nnist/tests/: CMakeLists.txt  Parser.cpp  Roundtrip.cpp  main.cpp
scripts/: build.sh  format.sh  format_check.sh  lint_cert.sh  sbom.sh
